@@ -5,6 +5,8 @@ import de.komoot.photon.PhotonDocAddressSet;
 import de.komoot.photon.PhotonDocInterpolationSet;
 import de.komoot.photon.Updater;
 import de.komoot.photon.nominatim.model.*;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.locationtech.jts.geom.Geometry;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.transaction.TransactionStatus;
@@ -17,7 +19,7 @@ import java.util.concurrent.locks.ReentrantLock;
  * Importer for updates from a Nominatim database.
  */
 public class NominatimUpdater extends NominatimConnector {
-    private static final org.slf4j.Logger LOGGER = org.slf4j.LoggerFactory.getLogger(NominatimUpdater.class);
+    private static final Logger LOGGER = LogManager.getLogger();
 
     private static final String SELECT_COLS_PLACEX = "SELECT place_id, osm_type, osm_id, class, type, name, postcode, address, extratags, ST_Envelope(geometry) AS bbox, parent_place_id, linked_place_id, rank_address, rank_search, importance, country_code, centroid";
     private static final String SELECT_COLS_ADDRESS = "SELECT p.name, p.class, p.type, p.rank_address";
@@ -68,13 +70,12 @@ public class NominatimUpdater extends NominatimConnector {
     /**
      * Lock to prevent thread from updating concurrently.
      */
-    private ReentrantLock updateLock = new ReentrantLock();
+    private final ReentrantLock updateLock = new ReentrantLock();
 
 
     // One-item cache for address terms. Speeds up processing of rank 30 objects.
     private long parentPlaceId = -1;
     private List<AddressRow> parentTerms = null;
-    private boolean useGeometryColumn;
 
 
     public NominatimUpdater(String host, int port, String database, String username, String password, boolean useGeometryColumn) {
@@ -245,7 +246,7 @@ public class NominatimUpdater extends NominatimConnector {
                 query,
                 placeToNominatimResult, placeId);
 
-        return result.isEmpty() ? Collections.EMPTY_LIST : result.get(0);
+        return result.isEmpty() ? List.of() : result.get(0);
     }
 
     public Iterable<PhotonDoc> getInterpolationsByPlaceId(long placeId) {
@@ -254,7 +255,7 @@ public class NominatimUpdater extends NominatimConnector {
                         + " FROM location_property_osmline WHERE place_id = ? and indexed_status = 0",
                 osmlineToNominatimResult, placeId);
 
-        return result.isEmpty() ? Collections.EMPTY_LIST : result.get(0);
+        return result.isEmpty() ? List.of() : result.get(0);
     }
 
 
@@ -269,7 +270,7 @@ public class NominatimUpdater extends NominatimConnector {
         AddressType atype = doc.getAddressType();
 
         if (atype == null || atype == AddressType.COUNTRY) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         List<AddressRow> terms = null;
